--- a/test _poetics/style3.css
+++ b/test _poetics/style3.css
@@ -352,11 +352,11 @@ main {
 
 @media screen and (max-width: 768px) {
     .content {
-        height: 100vh; /* Ensure full height on smaller screens */
+        height: 95vh; /* Ensure full height on smaller screens */
         padding: 0; /* Remove padding to maximize height */
     }
 	
 	  .content p {
-        font-size: 6vw; /* Increase font size for smaller screens */
+        font-size: 2.1em; /* Increase font size for smaller screens */
     }
 }
